fix list item "z-index:0"

--- a/static/sass/_default.scss
+++ b/static/sass/_default.scss
@@ -205,3 +205,11 @@ body.view-incourse {
 .fa {
   line-height: 1.9em !important;
 }
+
+.courses-container {
+  .courses {
+    .course {
+      z-index: 0 !important;
+    }
+  }
+}
